Use List.of instead Arrays.asList